@startuml

title __PART1's Class Diagram__\n

  namespace com.homework6.part1 {
    abstract class com.homework6.part1.Bird {
        ~ feathers : boolean
        ~ layEgg : boolean
        ~ fly()
    }
  }
  

  namespace com.homework6.part1 {
    abstract class com.homework6.part1.FlyingBird {
        + toString()
        ~ fly()
    }
  }
  

  namespace com.homework6.part1 {
    class com.homework6.part1.Kurka {
        ~ Kurka()
    }
  }
  

  namespace com.homework6.part1 {
    class com.homework6.part1.Lastivka {
        ~ Lastivka()
    }
  }
  

  namespace com.homework6.part1 {
    class com.homework6.part1.Main {
        {static} + main()
    }
  }
  

  namespace com.homework6.part1 {
    abstract class com.homework6.part1.NonFlyingBird {
        + toString()
        ~ fly()
    }
  }
  

  namespace com.homework6.part1 {
    class com.homework6.part1.Orel {
        ~ Orel()
    }
  }
  

  com.homework6.part1.FlyingBird -up-|> com.homework6.part1.Bird
  com.homework6.part1.Kurka -up-|> com.homework6.part1.NonFlyingBird
  com.homework6.part1.Lastivka -up-|> com.homework6.part1.FlyingBird
  com.homework6.part1.NonFlyingBird -up-|> com.homework6.part1.Bird
  com.homework6.part1.Orel -up-|> com.homework6.part1.FlyingBird


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
